# Knowledge_based_RAG

./: README.md  docker-compose.yml  ingest.py  main.py  pyproject.toml
backend/: Dockerfile  main.py  ragLogic.py  requirements.txt  server.py
data/text_files/: sample.txt
data/vector_store/: chroma.sqlite3
frontend/: Dockerfile  app.py
